2008-05-14  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl/png.py: Updated to latest version from pypng. Open files in binary
	  mode so they work in Windows.
	* src/glchess.in.in: Don't modify sys.path as this can cause modules to be loaded that
	  don't match the intepreter version (Bug #528953)

2008-05-10  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/ggz/chess.py: Fix crash decoding empty GGZ strings (Bug #530579)
	* src/lib/chess/pgn.py: Handle unknown tokens (Bug #526252)
	* src/lib/main.py: Correctly catch and display PGN errors
	* src/lib/gtkui/gtkui.py, src/lib/display.py: Show dialog if unable to claim draw (Bug #515542)
	* src/lib/chess/board.py:
	  src/lib/game.py: Added detection for draw due to insufficient material (Bug #485250)
	* src/lib/game.py: Fix regression in loaded games not displaying result
	* src/lib/history.py:
	* src/lib/display.py:
	* src/lib/main.py: Correctly move games from the history (~/.gnome2/glchess/history)
	  when the user selects a file to save to.

2008-04-13  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/ai.py: Check PID returned on SIGCHLD (Bug #527686)

2008-04-12  Jordi Mallach  <jordi@sindominio.net>

	* src/lib/main.py: Add missing gettext call for the Application Log
	viewer.

2008-04-10  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/network.py: Handle missing throbber icons (Bug #524829)
	* src/lib/gtkui/network.py: Disable room 'new' and 'join' buttons when network
	  protocol is busy (Bug #523818)
	* src/lib/glchess.py: Import the main module on initialisation not runtime (Bug #524665)
        * src/lib/history.py: Abort history saving if cannot create history directory (Bug #523076)

2008-04-5  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/chessview.py: Abort 3D render if widget_get_gl_context() returns None (Bug #512068)
	* data/ai.xml: Add Gambit Fruit to AI list (Bug #521623)