@@ -1,3 +1,10 @@
+2008-05-29  Jason D. Clinton  <me@jasonclinton.com>
+
+	* src/glchess.in.in:
+	* src/Makefile.am:
+	* src/lib/defaults.py.in:
+	* src/lib/glchess.py: make everyone happy with sys.path shenanigans (Bug #524665, Bug #528953)
+
 2008-05-14  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/scene/opengl/png.py: Updated to latest version from pypng. Open files in binary
